--- a/13_1_1/13_1_1.csproj
+++ b/13_1_1/13_1_1.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Rectangle.cs" />
+    <Compile Include="Classes\Triangle.cs" />
+    <Compile Include="Classes\TwoDShape.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
