--- a/13_2/1.2.csproj
+++ b/13_2/1.2.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Triangle.cs" />
-    <Compile Include="Classes\TwoDShape.cs" />
+    <Compile Include="Classes\02.Triangle.cs" />
+    <Compile Include="Classes\01.TwoDShape.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
